# DST-EGQA

./: CONTRIBUTING.md  LICENSE  README.md  create_key_results.py  organize_results.py  pyproject.toml  requirements.txt  set_env.sh  train_custom_icdst.py  train_test.py
data/: .gitignore  create_lifelong_data_sgd.py
experiment_scripts/: all_commands_for_paper.sh  eval_commands.sh  submit_SGD_CL_jobs.sh  submit_SGD_upperbound_jobs.sh  submit_all_precompute_jobs.sh  submit_egqa_experiment.sh  submit_evaluate_checkpoints.sh  submit_precompute_example_pairing.sh
src/egqa/: .gitignore  __init__.py  copy_compute.py  examine_dataloader.py  parameters.py  seq2seq_dst.py  utils.py
src/egqa/data_utils/: dataloader.py  dataloader_utils.py  general_constants.py  sgd_constants.py  slots2questions.py
src/egqa/retrieval/: retrieval_db.py  retrieval_utils.py
test/: test_model.py  test_retrieval.py  test_setup_data.py  test_utils.py
test/example_test_data/: SGD_retrieval_results.json  example_CL_data.json  example_CL_db_data.json  example_alignment_outputs.json  example_ingredients.json  example_target_question_alignment_outputs.json  example_transferqa_seqs.json  example_transferqa_test_data.json  restaurant_simpletod_data.json  restaurant_transferqa_aligned_data.json  restaurant_transferqa_mixed_data.json  restaurant_transferqa_random_data.json  retrieval_results.json
